syntax = "proto3";
option java_package = "com.alipay.sofa.registry.common.model.client.pb";
option java_multiple_files = true;
option go_package = "proto";

message RegisterIdsPb {
  repeated string registerIds = 1;
}